@@ -143,30 +143,6 @@ class PrototypeHelperTest < Test::Unit::TestCase
     assert_dom_equal %(<script type=\"text/javascript\">\n//<![CDATA[\nnew Form.Observer('cart', 2, function(element, value) {alert('Form changed')})\n//]]>\n</script>),
       observe_form("cart", :frequency => 2, :function => "alert('Form changed')")
   end
-
-  def test_update_element_function
-    assert_equal %($('myelement').innerHTML = 'blub';\n),
-      update_element_function('myelement', :content => 'blub')
-    assert_equal %($('myelement').innerHTML = 'blub';\n),
-      update_element_function('myelement', :action => :update, :content => 'blub')
-    assert_equal %($('myelement').innerHTML = '';\n),
-      update_element_function('myelement', :action => :empty)
-    assert_equal %(Element.remove('myelement');\n),
-      update_element_function('myelement', :action => :remove)
-      
-    assert_equal %(new Insertion.Bottom('myelement','blub');\n),
-      update_element_function('myelement', :position => 'bottom', :content => 'blub')
-    assert_equal %(new Insertion.Bottom('myelement','blub');\n),
-      update_element_function('myelement', :action => :update, :position => :bottom, :content => 'blub')
-      
-    _erbout = ""
-    assert_equal %($('myelement').innerHTML = 'test';\n),
-      update_element_function('myelement') { _erbout << "test" }
-      
-    _erbout = ""
-    assert_equal %($('myelement').innerHTML = 'blockstuff';\n),
-      update_element_function('myelement', :content => 'paramstuff') { _erbout << "blockstuff" }
-  end
   
   def test_update_page
     block = Proc.new { |page| page.replace_html('foo', 'bar') }
