@@ -1,5 +1,7 @@
 *SVN*
 
+* Deprecate JavaScriptHelper#update_element_function, which is superseeded by RJS [Thomas Fuchs]
+
 * pluralize helper interprets nil as zero.  #6474 [pope]
 
 * Fix invalid test fixture exposed by stricter Ruby 1.8.5 multipart parsing.  #6524 [Bob Silva]
